Changelog for Weeder

    #7, don't say modules with only instances are always redundant
    #6, don't give partial pattern matches when reading .weeder.yaml
0.1.2
    #3, deal with space-separated hs-source-dirs
0.1.1
    #2, use "stack query" rather than parsing stack.yaml
0.1
    Initial version